# Cerberus

./: .env.example  .gitignore  AGENT_ONBOARDING.md  Dockerfile-app  Dockerfile-dashboard-enhancer-api  Dockerfile-dashboard-enhancer-ui  Dockerfile-dashboard-mcp-server  Dockerfile-mcp  Dockerfile-ops-frontend  Dockerfile-ops-triage-agent  Dockerfile-ops-triage-mcp-server  Dockerfile-sas-generator  Dockerfile-sas-generator-api  Dockerfile-sas-generator-ui  Dockerfile-sas-mcp-server  LICENSE  README.md  cloudbuild-app.yaml  cloudbuild-dashboard-enhancer-api.yaml  cloudbuild-dashboard-enhancer-ui.yaml  cloudbuild-dashboard-mcp.yaml  cloudbuild-mcp.yaml  cloudbuild-ops-frontend.yaml  cloudbuild-ops-mcp.yaml  cloudbuild-sas-generator-api.yaml  cloudbuild-sas-generator.yaml  cloudbuild-sas-mcp.yaml  pyproject.toml
app/: config.py  logging_config.py  main.py  observability.py  security.py
app/agent/: nodes.py  state.py  workflow.py
app/mcp_client/: client.py
app/models/: schemas.py
app/prompts/: synthesis_v1.py
dashboard_enhancer/: __init__.py  app.py  config.py  governance.py  main.py  observability.py  workflow.py
dashboard_enhancer/analyzer/: __init__.py  code_analyzer.py  telemetry_discoverer.py
dashboard_enhancer/designer/: __init__.py  gemini_designer.py  templates.py
dashboard_enhancer/discovery/: __init__.py  service_analyzer.py
dashboard_enhancer/evaluator/: __init__.py  domain_evaluator.py  evaluation_prompts.py
dashboard_enhancer/mcp_client/: __init__.py  client.py
dashboard_enhancer/models/: __init__.py  schemas.py
dashboard_enhancer/proposer/: __init__.py  metric_proposer.py
dashboard_enhancer/provisioner/: __init__.py  metrics_provisioner.py
dashboard_mcp_server/: __init__.py  config.py  server.py
dashboard_mcp_server/tools/: __init__.py  dashboards.py  llm_obs.py  monitors.py  slos.py  spans_metrics.py
infra/cloudrun/: configure_iam.sh  dashboard-enhancer-api-sidecar.yaml  dashboard-mcp-sidecar.yaml  deploy.sh  deploy_mcp_server.sh  sas-generator-api-sidecar.yaml  service-with-sidecar.yaml  setup_secrets.sh
infra/datadog/: apply_config.sh  dashboard.json  monitors.json  (+1 more)
mcp_server/: pyproject.toml  server.py
mcp_server/tools/: __init__.py  dashboards.py  incidents.py
ops_assistant_frontend/: __init__.py  api_client.py  app.py  config.py  observability.py
ops_triage_agent/: config.py  evaluation.py  governance.py  logging_config.py  main.py  observability.py  security.py
ops_triage_mcp_server/: server.py
sas_generator/: __init__.py  api.py  app.py  config.py  generator.py  governance.py  logging_config.py  main.py  mcp_client.py  observability.py  prompts.py  quality.py  sashelp_schemas.py  workflow.py
sas_mcp_server/: __init__.py  config.py  server.py
scripts/: create_monitor.py  create_slo.py  onboard_agent.py  test_mcp_client.py  test_shared_observability.py  traffic_gen.py
shared/: __init__.py
submission/: dashboard.json  monitors.json  slos.json
(+28 files in other folders)
