[project]
name = "datadog-mcp-server"
version = "0.1.0"
description = "MCP server exposing Datadog tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",
    "datadog-api-client>=2.30.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
